--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
 					<li><a href="Transfers.html">Transfers</a></li>
-					<li><a href="Injury-News.html">Injury News</a></li>
+					<li><a href="News.html">News</a></li>
 					<li><a href="Stats.html">Stats</a></li>
-					<li><a href="Clubs&Players.html">Clubs & Players</a></li>
+					<li><a href="ContactUs.html">Contact Us</a></li>
 					
 				</ul>
 			</nav>
@@ -53,6 +53,14 @@
 				<li><span class="team" title="BDF XI">BDF</span> 0-0 <span class="team" title="Nico United">NICO</span></li>
 				
 			</ul>
+			
+			<div>
+				<h5>Live Blog Recap</h5>
+				<video controls width="100%" style="border: 1px solid #ccc; border-radius: 10px;">
+				<source src="Pako-Gaofose-Goal.mp4" type="video/mp4"> Your browser does not support the video tag. </video>
+				<p style="font-size: 0.9rem; margin-top: 0.5rem;"> Pako Gaofose's goal that gave Mochudi center Chiefs the lead. </p> 
+			
+			</div>
 		</aside>
 		
 		<section class="main-news">
