--- a/Fixtures.html
+++ b/Fixtures.html
@@ -8,6 +8,69 @@
 	<title>FNB Botswana Premier League</title>
 	<link rel="stylesheet" href="styles.css">
 	
+	 <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f9ff;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav {
+      background-color: #009999;
+      padding: 1rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a.active,
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    h1 {
+      color: #002f6c;
+      margin-bottom: 1rem;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    th, td {
+      padding: 1rem;
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    th {
+      background-color: #0055a4;
+      color: white;
+    }
+
+    tr:hover {
+      background-color: #f0f8ff;
+    }
+  </style>
 </head>
 
 <body>
@@ -25,14 +88,140 @@
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
 					<li><a href="Transfers.html">Transfers</a></li>
-					<li><a href="Injury-News.html">Injury News</a></li>
+					<li><a href="News.html">News</a></li>
 					<li><a href="Stats.html">Stats</a></li>
-					<li><a href="Clubs&Players.html">Clubs & Players</a></li>
+					<li><a href="ContactUs.html">Contact Us</a></li>
 					
 				</ul>
 			</nav>
 		</div>
 	</header>
+	
+	
+  <main>
+    <h1>Upcoming Fixtures</h1>
+    <table>
+      <tr>
+        <th>Date</th>
+        <th>Home</th>
+        <th>Away</th>
+        <th>Time</th>
+        <th>Venue</th>
+      </tr>
+      <tr>
+        <td>May 17</td>
+        <td>BDF XI</td>
+        <td>Nico Utd</td>
+        <td>15:00</td>
+        <td>BIAC Stadium</td>
+      </tr>
+      <tr>
+        <td>May 17</td>
+        <td>Gaborone Utd</td>
+        <td>Jwaneng Galaxy</td>
+        <td>15:00</td>
+        <td>GU Stadium</td>
+      </tr>
+      <tr>
+        <td>May 17</td>
+        <td>Morupule Wanderers</td>
+        <td>Sua Flamingoes</td>
+        <td>15:00</td>
+        <td>Palapye Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 17</td>
+        <td>Orapa Utd</td>
+        <td>Mochudu Center Chiefs</td>
+        <td>15:00</td>
+        <td>Itekeng Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 17</td>
+        <td>Security Systems</td>
+        <td>Chadibe</td>
+        <td>15:00</td>
+        <td>Lobatse Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 17</td>
+        <td>Tafic FC</td>
+        <td>Extension Gunners</td>
+        <td>15:00</td>
+        <td>Obed Itani Chilume Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 17</td>
+        <td>Township Rollers</td>
+        <td>Flamingo Santos</td>
+        <td>15:00</td>
+        <td>Royal Aria Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 17</td>
+        <td>VTM</td>
+        <td>Matebele</td>
+        <td>15:00</td>
+        <td>VTDM Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Mochudu Center Chiefs</td>
+        <td>Morupule Wanderers</td>
+        <td>17:00</td>
+        <td>Lobatse Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Chadibe</td>
+        <td>Orapa Utd</td>
+        <td>17:00</td>
+        <td>Obed Itani Chilume Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Flamingo Santos</td>
+        <td>Security Systems</td>
+        <td>17:00</td>
+        <td>VTDM Stadium</td>
+      </tr>
+	   <tr>
+        <td>May 24</td>
+        <td>Jwaneng Galaxy</td>
+        <td>VTM FC</td>
+        <td>17:00</td>
+        <td>Galaxy Stadium</td>
+      </tr>
+	   <tr>
+        <td>May 24</td>
+        <td>Matebele</td>
+        <td>BDF XI</td>
+        <td>17:00</td>
+        <td>BIAC Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Nico Utd</td>
+        <td>Tafic FC</td>
+        <td>17:00</td>
+        <td>Sam Sono Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Sua Flamingoes</td>
+        <td>Extension Gunners</td>
+        <td>17:00</td>
+        <td>Sowa Town Council Stadium</td>
+      </tr>
+	  <tr>
+        <td>May 24</td>
+        <td>Township Rollers</td>
+        <td>Gaborone Utd</td>
+        <td>17:00</td>
+        <td>Sowa Town Council Stadium</td>
+      </tr>
+    </table>
+  </main>
 
 </body>
 </html>
