--- a/Transfers.html
+++ b/Transfers.html
@@ -25,14 +25,59 @@
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
 					<li><a href="Transfers.html">Transfers</a></li>
-					<li><a href="Injury-News.html">Injury News</a></li>
+					<li><a href="News.html">News</a></li>
 					<li><a href="Stats.html">Stats</a></li>
-					<li><a href="Clubs&Players.html">Clubs & Players</a></li>
+					<<li><a href="ContactUs.html">Contact Us</a></li>
 					
 				</ul>
 			</nav>
 		</div>
 	</header>
+	
+	<section class="section">
+  <h2 style="text-align: center; color: #0055a4;">Latest Transfers</h2>
+
+  <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
+
+    <!-- Transfer Card -->
+    <div style="width: 300px; background-color: #ffffff; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <img src="Diwanga.jpg" alt="Pilato Diwanga" style="width: 100%; height: 180px; object-fit: cover;">
+      <div style="padding: 1rem;">
+        <h3 style="margin: 0; color: #0055a4;">Pilato Diwanga</h3>
+        <p style="font-size: 0.9rem;">Moved from <strong>Western Dynamites FC</strong> to <strong>Tafic FC</strong></p>
+        <p style="font-size: 0.9rem; color: green;"><strong>Status:</strong> Confirmed</p>
+      </div>
+    </div>
+
+    <div style="width: 300px; background-color: #ffffff; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <img src="Thuto-Moloi.jpg" alt="Thuto Moloi" style="width: 100%; height: 180px; object-fit: cover;">
+      <div style="padding: 1rem;">
+        <h3 style="margin: 0; color: #0055a4;">Thuto Moloi</h3>
+        <p style="font-size: 0.9rem;">Rumored move to <strong>Union Flamingo Santos</strong> from <strong>Tafic FC</strong></p>
+        <p style="font-size: 0.9rem; color: orange;"><strong>Status:</strong> Rumored</p>
+      </div>
+    </div>
+	
+	<div style="width: 300px; background-color: #ffffff; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <img src="Mothusi-Cooper.jpg" alt="Mothusi Cooper" style="width: 100%; height: 180px; object-fit: cover;">
+      <div style="padding: 1rem;">
+        <h3 style="margin: 0; color: #0055a4;">Mothusi Cooper</h3>
+        <p style="font-size: 0.9rem;">Moved from <strong>Gaborone United</strong> to <strong>Township Rollers</strong></p>
+        <p style="font-size: 0.9rem; color: green;"><strong>Status:</strong> Confirmed</p>
+      </div>
+    </div>
+	
+	<div style="width: 300px; background-color: #ffffff; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <img src="Piro-Moloi.jpg" alt="Pontsho Moloi" style="width: 100%; height: 180px; object-fit: cover;">
+      <div style="padding: 1rem;">
+        <h3 style="margin: 0; color: #0055a4;">Pontsho Moloi</h3>
+        <p style="font-size: 0.9rem;">Coach Piro Moved from <strong>Gaborone United</strong> to <strong>Mochudi Center Chiefs</strong></p>
+        <p style="font-size: 0.9rem; color: green;"><strong>Status:</strong> Confirmed</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
