--- a/Transfers.html
+++ b/Transfers.html
@@ -20,7 +20,7 @@
 				
 				<ul class="nav-links">
 					
-					<li><a href="FNBHome.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="Fixtures.html">Fixtures</a></li>
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
