--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 			
 			<div>
 				<h5>Live Blog Recap</h5>
-				<video controls width="100%" style="border: 1px solid #ccc; border-radius: 10px;">
-				<source src="Pako-Gaofose-Goal.mp4" type="video/mp4"> Your browser does not support the video tag. </video>
-				<p style="font-size: 0.9rem; margin-top: 0.5rem;"> Pako Gaofose's goal that gave Mochudi center Chiefs the lead. </p> 
+				<img src="MCCteam.jpg" alt="Mochudi Center Chiefs" class="blog-image" width="600" height="400"><br>
+				<p style="font-size: 0.9rem; margin-top: 0.5rem;"> Mochudi Center Chiefs Team Photo. </p> 
 			
 			</div>
 		</aside>
@@ -90,5 +89,15 @@
 	
 	</main>
 
+	<footer class="site-footer">
+	
+		<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
+		
+	</footer>
 </body>
 </html>
