--- a/Tables.html
+++ b/Tables.html
@@ -113,14 +113,15 @@
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
 					<li><a href="Transfers.html">Transfers</a></li>
-					<li><a href="Injury-News.html">Injury News</a></li>
+					<li><a href="News.html">News</a></li>
 					<li><a href="Stats.html">Stats</a></li>
-					<li><a href="Clubs&Players.html">Clubs & Players</a></li>
+					<li><a href="ContactUs.html">Contact Us</a></li>
 					
 				</ul>
 			</nav>
 		</div>
 	</header>
+	<main>
 	
 	<h1>FNB Premiership Table</h1>
 	
@@ -158,7 +159,7 @@
 			<td>21</td>
 			<td>26</td>
 			<td><strong>57</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">W</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
 		</tr>
 		
 		<tr>
@@ -200,7 +201,7 @@
 			<td>26</td>
 			<td>27</td>
 			<td><strong>52</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
 		</tr>
 		
 		<tr>
@@ -214,7 +215,7 @@
 			<td>17</td>
 			<td>25</td>
 			<td><strong>50</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">W</span> <span class="W">L</span> <span class="W">D</span></td>
 		</tr>
 		
 		<tr>
@@ -228,7 +229,7 @@
 			<td>25</td>
 			<td>9</td>
 			<td><strong>50</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">L</span></td>
 		</tr>
 		
 		<tr>
@@ -242,7 +243,7 @@
 			<td>31</td>
 			<td>7</td>
 			<td><strong>41</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">W</span> <span class="W">D</span> <span class="W">D</span></td>
 		</tr>
 		
 		<tr>
@@ -256,7 +257,7 @@
 			<td>28</td>
 			<td>1</td>
 			<td><strong>33</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">D</span> <span class="W">D</span> <span class="W">W</span></td>
 		</tr>
 		
 		<tr>
@@ -270,7 +271,7 @@
 			<td>33</td>
 			<td>1</td>
 			<td><strong>30</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">W</span> <span class="D">W</span> <span class="W">D</span> <span class="W">D</span> <span class="W">L</span></td>
 		</tr>
 		
 		<tr>
@@ -284,7 +285,7 @@
 			<td>39</td>
 			<td>-9</td>
 			<td><strong>30</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">L</span> <span class="W">W</span> <span class="W">L</span></td>
 		</tr>
 		
 		<tr>
@@ -298,7 +299,7 @@
 			<td>39</td>
 			<td>-13</td>
 			<td><strong>29</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">L</span></td>
 		</tr>
 		
 		<tr>
@@ -312,7 +313,7 @@
 			<td>30</td>
 			<td>-15</td>
 			<td><strong>27</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">D</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
 		</tr>
 		
 		<tr>
@@ -326,7 +327,7 @@
 			<td>31</td>
 			<td>-9</td>
 			<td><strong>25</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">L</span> <span class="W">W</span> <span class="W">W</span></td>
 		</tr>
 		
 		<tr>
@@ -340,7 +341,7 @@
 			<td>38</td>
 			<td>-20</td>
 			<td><strong>22</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">D</span> <span class="W">L</span></td>
 		</tr>
 		
 		<tr class="relegation">
@@ -354,7 +355,7 @@
 			<td>50</td>
 			<td>-33</td>
 			<td><strong>16</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">L</span> <span class="W">D</span> <span class="W">D</span></td>
 		</tr>
 		
 		<tr class="relegation">
@@ -368,11 +369,11 @@
 			<td>60</td>
 			<td>-48</td>
 			<td><strong>9</strong></td>
-			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">W</span> <span class="W">W</span> <span class="W">W</span></td>
+			<td class="form"> <span class="L">L</span> <span class="D">D</span> <span class="W">D</span> <span class="W">L</span> <span class="W">L</span></td>
 		</tr>
 		
 	</table>
-	
+	</main>
 	<!--<script>
 		
 		function showBottom8() {
@@ -390,6 +391,11 @@
 		}
 		
 	</script>-->
-
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
