--- a/Fixtures.html
+++ b/Fixtures.html
@@ -222,6 +222,11 @@
       </tr>
     </table>
   </main>
-
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
