--- a/Results.html
+++ b/Results.html
@@ -73,9 +73,10 @@
 			</nav>
 		</div>
 	</header>
+	<main>
 	
 	<section class="section">
-  <h2>Matchweek 24 Results</h2>
+  <h2>Selected Results</h2>
 
   <div style="display: flex; flex-wrap: wrap; gap: 2rem; align-items: flex-start;">
 
@@ -92,39 +93,75 @@
         </thead>
         <tbody>
           <tr>
-            <td>May 25</td>
-            <td title="Township Rollers">TWN</td>
-            <td>2 - 1</td>
-            <td title="Gaborone United">GBU</td>
+            <td>May 17</td>
+            <td title="BDF XI">BDF XI</td>
+            <td>1 - 2</td>
+            <td title="Nico United">Nico</td>
           </tr>
           <tr>
-            <td>May 25</td>
-            <td title="Orapa United">ORU</td>
-            <td>1 - 1</td>
-            <td title="Police XI">PLX</td>
+            <td>May 17</td>
+            <td title="Gaborone United">GU</td>
+            <td>2 - 0</td>
+            <td title="Township Rollers">ROL</td>
+          </tr>
+		  <tr>
+            <td>May 17</td>
+            <td title="Morupule">MOR</td>
+            <td>2 - 3</td>
+            <td title="Sua Flamingoes">SUA</td>
+          </tr>
+		  <tr>
+            <td>May 17</td>
+            <td title="Tafic FC">TAFIC</td>
+            <td>3 - 1</td>
+            <td title="Extension Gunners">GUN</td>
+          </tr>
+		  <tr>
+            <td>May 14</td>
+            <td title="Mochudi Center Chiefs">MCC</td>
+            <td>3 - 2</td>
+            <td title="Security Systems">SES</td>
+          </tr>
+		  <tr>
+            <td>May 14</td>
+            <td title="Chadibe">CHA</td>
+            <td>1 - 2</td>
+            <td title="Flamingo Santos">SANTOS</td>
+          </tr>
+		  <tr>
+            <td>May 14</td>
+            <td title="Matebele">MAT</td>
+            <td>0 - 3</td>
+            <td title="Gaborone United">GU</td>
+          </tr>
+		  <tr>
+            <td>May 14</td>
+            <td title="Nico United">NICO</td>
+            <td>0 - 3</td>
+            <td title="VTM FC">VTM</td>
           </tr>
         </tbody>
       </table>
     </div>
 
     <!-- Right Column: Post-game Content -->
-    <div style="flex: 1 1 35%;">
-      <h3>Post-Match Interviews</h3>
-      <video controls width="100%" style="border: 1px solid #ccc; border-radius: 10px; margin-bottom: 1rem;">
-        <source src="Jwaneng-Coach.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+    <div style="width: 300px; background-color: #ffffff; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+			<img src="CCTV.jpg" alt="Lebogang Ditsile" style="width: 100%; height: 180px; object-fit: cover;">
+			<div style="padding: 1rem;">
+				<h3 style="margin: 0; color: #0055a4;">"CCTV" delighted about the cleansheet</h3>
+				<p style="font-size: 0.9rem;">Gaborone United midfielder says he's very happy they were able to keep a cleansheet against their city rivals Township Rollers. </p>
+			</div>
+		</div>
 
-      <h3>Match Highlights</h3>
-      <video controls width="100%" style="border: 1px solid #ccc; border-radius: 10px;">
-        <source src="Sua-highlights.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
 
   </div>
 </section>
-
-
+</main>
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
