--- a/Transfers.html
+++ b/Transfers.html
@@ -20,7 +20,7 @@
 				
 				<ul class="nav-links">
 					
-					<li><a href="index.html">Home</a></li>
+					<li><a href="FNBHome.html">Home</a></li>
 					<li><a href="Fixtures.html">Fixtures</a></li>
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
@@ -33,7 +33,7 @@
 			</nav>
 		</div>
 	</header>
-	
+	<main>
 	<section class="section">
   <h2 style="text-align: center; color: #0055a4;">Latest Transfers</h2>
 
@@ -77,7 +77,12 @@
     </div>
   </div>
 </section>
-
-
+</main>
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
