--- a/News.html
+++ b/News.html
@@ -43,6 +43,7 @@
 			</nav>
 		</div>
 	</header>
+	<main>
 	
 	<section class="section">
 			<h2 style="text-align: center; color: #0055a4;">Latest News</h2>
@@ -117,7 +118,12 @@
 
   </div>
 </section>
-
-
+</main>
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
