--- a/Stats.html
+++ b/Stats.html
@@ -25,14 +25,113 @@
 					<li><a href="Results.html">Results</a></li>
 					<li><a href="Tables.html">Tables</a></li>
 					<li><a href="Transfers.html">Transfers</a></li>
-					<li><a href="Injury-News.html">Injury News</a></li>
+					<li><a href="News.html">News</a></li>
 					<li><a href="Stats.html">Stats</a></li>
-					<li><a href="Clubs&Players.html">Clubs & Players</a></li>
+					<<li><a href="ContactUs.html">Contact Us</a></li>
 					
 				</ul>
 			</nav>
 		</div>
 	</header>
+	<main class="stats-page">
+    <h2>FNB Premiership Stats</h2>
 
+    <section class="stats-section">
+      <h3>Top Goal Scorers</h3>
+      <table class="stats-table">
+        <thead>
+          <tr>
+            <th>Player</th>
+            <th>Club</th>
+            <th>Goals</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Jean Lwamba 14</td>
+            <td>Tafic FC</td>
+            <td>14</td>
+          </tr>
+          <tr>
+            <td>Eric Ookame</td>
+            <td>Orapa United</td>
+            <td>13</td>
+          </tr>
+          <tr>
+            <td>Mpho Kgaswane</td>
+            <td>Gaborone United</td>
+            <td>12</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+	
+    <section class="stats-section">
+      <h3>Top Assists</h3>
+      <table class="stats-table">
+        <thead>
+          <tr>
+            <th>Player</th>
+            <th>Club</th>
+            <th>Assists</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mbatshi Elias</td>
+            <td>Security Systems</td>
+            <td>9</td>
+          </tr>
+          <tr>
+            <td>Tumisang Orebonye</td>
+            <td>Gaborone United</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>Goitseone Phoko</td>
+            <td>Botswana Defence Force XI</td>
+            <td>7</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class="stats-section">
+      <h3>Clean Sheets</h3>
+      <table class="stats-table">
+        <thead>
+          <tr>
+            <th>Goalkeeper</th>
+            <th>Club</th>
+            <th>Clean Sheets</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Goitseone Phoko</td>
+            <td>Gaborone United</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>Kabelo Dambe</td>
+            <td>Jwaneng Galaxy</td>
+            <td>9</td>
+          </tr>
+          <tr>
+            <td>Kagiso Tshelametsi</td>
+            <td>Orapa United</td>
+            <td>8</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+	<div class="footer-social">
+			<p>&copy: 2025 FNB Premiership. All rights reserved.</p>
+			<a href="https://facebook.com" target="_blank">Facebook</a>
+			<a href="https://twitter.com" target="_blank">X</a>
+			<a href="https://instagram.com" target="_blank">Instagram</a>
+		</div>
 </body>
 </html>
